# SimpleBackend

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  supervisord.conf
app/alembic/: env.py
app/alembic/versions/: 0b3d6213a2bd_add_pk_option_auto_increase.py  5d53ed830f64_initial_migration.py  737902c44fef_add_item_timetable_models.py
app/jobs/: job_timetable.py  tasks.py
app/scripts/: test_all.sh
app/src/: __init__.py
app/src/core/: settings.py
app/src/crud/: _base.py  item.py  member.py  timetable.py
app/src/db/: _base.py  database.py  models.py
app/src/helper/: exceptions.py  logging.py
app/src/router/: __init__.py  item.py  member.py  timetable.py
app/src/schemas/: item.py  member.py  timetable.py
app/src/utils/: documents.py  filter_expr.py
app/test/: conftest.py  helper.py  test_item.py  test_member.py  test_timetable.py
es/: elasticsearch.yml
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
jenkins/: Dockerfile
kibana/: kibana.yml
scripts/: setup.sh
