[tool.poetry]
name = "simplebackend application"
version = "0.1.0"
description = "Simple Backend Application written with FastAPI."
authors = ["bnbong <bbbong9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
aiomysql = "0.2.0"
alembic = "1.12.0"
annotated-types = "0.6.0"
anyio = "3.7.1"
certifi = "2023.7.22"
click = "8.1.7"
exceptiongroup = "1.1.3"
fastapi = "0.104.0"
greenlet = "3.0.0"
h11 = "0.14.0"
httpcore = "0.18.0"
httptools = "0.6.1"
httpx = "0.25.0"
idna = "3.4"
iniconfig = "2.0.0"
mako = "1.2.4"
markupsafe = "2.1.3"
packaging = "23.2"
pluggy = "1.3.0"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pydantic-core = "2.10.1"
pymysql = "1.1.0"
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
setuptools-scm = "8.0.4"
sniffio = "1.3.0"
sqlalchemy = "2.0.22"
starlette = "0.27.0"
tomli = "2.0.1"
typing-extensions = "4.8.0"
uvicorn = "0.23.2"
uvloop = "0.18.0"
watchfiles = "0.21.0"
websockets = "11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
